<?xml version="1.0"?>
<package format="3">
  <name>dji_tello_msgs</name>
  <version>0.0.1</version>
  <description>Mensagens customizadas para o Tello</description>
  <maintainer email="gfernandes10@hotmail.com.br">gabriel</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
